--- a/OC1.html
+++ b/OC1.html
@@ -65,7 +65,7 @@
 		<br />
 		<table width="678" border="0" cellspacing="0" cellpadding="0">
 			<tr height="15">
-				<td rowspan="2" width="70" height="71"><a onmouseover="MM_swapImage('image9','/images/ACETHUMBpre.jpg')" onmouseout="MM_swapImgRestore('image9','/images/LogoACE.jpg')" href="PROJECTACE.html"><img id="image9" src="/images/LogoACE.jpg" alt="Image_75x75" name="image9" height="100" width="150" border="0" /></a></td>
+				<td rowspan="2" width="70" height="71"><a onmouseover="MM_swapImage('image9','','/images/ACETHUMBpre.jpg')" onmouseout="MM_swapImgRestore()" href="PROJECTACE.html"><img id="image9" src="/images/LogoACE.jpg" alt="Image_75x75" name="image9" height="100" width="150" border="0" /></a></td>
 				<td rowspan="2" width="15" height="71"></td>
 				<td align="left" valign="middle" width="513" height="15"><b>ACE Insurance</b></td>
 			</tr>
@@ -78,7 +78,7 @@
 		<br />
 		<table width="678" border="0" cellspacing="0" cellpadding="0">
 			<tr height="15">
-				<td rowspan="2" width="150" height="71"><a onmouseover="MM_swapImage('EarlyAdvantageTHUMBsmall4','/images/EarlyAdvantageTHUMBpre.jpg')" onmouseout="MM_swapImgRestore('EarlyAdvantageTHUMBsmall4','/images/EarlyAdvantageTHUMBsmall.jpg')" href="PROJECTMuzzySpot.html"><img id="EarlyAdvantageTHUMBsmall4" src="/images/EarlyAdvantageTHUMBsmall.jpg" alt="" name="EarlyAdvantageTHUMBsmall4" width="150" height="100" border="0" /></a></td>
+				<td rowspan="2" width="150" height="71"><a onmouseover="MM_swapImage('EarlyAdvantageTHUMBsmall4','','/images/EarlyAdvantageTHUMBpre.jpg')" onmouseout="MM_swapImgRestore()" href="PROJECTMuzzySpot.html"><img id="EarlyAdvantageTHUMBsmall4" src="/images/EarlyAdvantageTHUMBsmall.jpg" alt="" name="EarlyAdvantageTHUMBsmall4" width="150" height="100" border="0" /></a></td>
 				<td rowspan="2" width="15" height="71"></td>
 				<td align="left" valign="middle" width="513" height="15"><b>Early Advantage</b></td>
 			</tr>
@@ -91,7 +91,7 @@
 		<br />
 		<table width="600" border="0" cellspacing="0" cellpadding="0">
 			<tr height="15">
-				<td rowspan="2" width="70" height="71"><a onmouseover="MM_swapImage('image10','/images/GE01THUMB%20copy.jpg')" onmouseout="MM_swapImgRestore('image10','/images/GE01THUMB.jpg')" href="PROJECTGE.html"><img id="image10" src="/images/GE01THUMB.jpg" alt="Image_75x75" name="image10" height="100" width="150" border="0" /></a></td>
+				<td rowspan="2" width="70" height="71"><a onmouseover="MM_swapImage('image10','','/images/GE01THUMB%20copy.jpg')" onmouseout="MM_swapImgRestore()" href="PROJECTGE.html"><img id="image10" src="/images/GE01THUMB.jpg" alt="Image_75x75" name="image10" height="100" width="150" border="0" /></a></td>
 				<td rowspan="2" width="15" height="71"></td>
 				<td align="left" valign="middle" width="513" height="15"><b>GE</b></td>
 			</tr>
@@ -176,27 +176,27 @@
 			<tr>
 				<td width="122">
 					<div align="center">
-						<a onmouseover="MM_swapImage('AButtonWebFlicks','','/images/ButtonWebFlicks.gif')" onmouseout="MM_swapImgRestore('AButtonWebFlicks','/images/AButtonWebFlicks.gif')" href="WebFlicks.html"><img id="AButtonWebFlicks" src="/images/AButtonWebFlicks.gif" alt="" name="AButtonWebFlicks" width="122" height="70" border="0" /></a></div>
+						<a onmouseover="MM_swapImage('AButtonWebFlicks','','/images/ButtonWebFlicks.gif')" onmouseout="MM_swapImgRestore()" href="WebFlicks.html"><img id="AButtonWebFlicks" src="/images/AButtonWebFlicks.gif" alt="" name="AButtonWebFlicks" width="122" height="70" border="0" /></a></div>
 				</td>
 				<td width="122">
 					<div align="center">
-						<a onmouseover="MM_swapImage('AButtonNationalBC','','/images/ButtonNationalBC.jpg')" onmouseout="MM_swapImgRestore('AButtonNationalBC','/images/AButtonNationalBC.gif')" href="NB.html"><img id="AButtonNationalBC" src="/images/AButtonNationalBC.gif" alt="" name="AButtonNationalBC" width="122" height="70" border="0" /></a></div>
+						<a onmouseover="MM_swapImage('AButtonNationalBC','','/images/ButtonNationalBC.jpg')" onmouseout="MM_swapImgRestore()" href="NB.html"><img id="AButtonNationalBC" src="/images/AButtonNationalBC.gif" alt="" name="AButtonNationalBC" width="122" height="70" border="0" /></a></div>
 				</td>
 				<td width="122">
 					<div align="center">
-						<a onmouseover="MM_swapImage('AButtonPhotoS','','/images/ButtonPhotoS.gif')" onmouseout="MM_swapImgRestore('AButtonPhotoS','/images/AButtonPhotoS.gif')" href="PS.html"><img id="AButtonPhotoS" src="/images/AButtonPhotoS.gif" alt="" name="AButtonPhotoS" width="122" height="70" border="0" /></a></div>
+						<a onmouseover="MM_swapImage('AButtonPhotoS','','/images/ButtonPhotoS.gif')" onmouseout="MM_swapImgRestore()" href="PS.html"><img id="AButtonPhotoS" src="/images/AButtonPhotoS.gif" alt="" name="AButtonPhotoS" width="122" height="70" border="0" /></a></div>
 				</td>
 				<td width="106">
 					<div align="center">
-						<a onmouseover="MM_swapImage('AButtonClients','','/images/ButtonClients.jpg')" onmouseout="MM_swapImgRestore('AButtonClients','/images/AButtonClients.gif')" href="OC1.html"><img id="AButtonClients" src="/images/AButtonClients.gif" alt="" name="AButtonClients" width="122" height="70" border="0" /></a></div>
+						<a onmouseover="MM_swapImage('AButtonClients','','/images/ButtonClients.jpg')" onmouseout="MM_swapImgRestore()" href="OC1.html"><img id="AButtonClients" src="/images/AButtonClients.gif" alt="" name="AButtonClients" width="122" height="70" border="0" /></a></div>
 				</td>
 				<td width="107">
 					<div align="center">
-						<a onmouseover="MM_swapImage('AButtonContact','','/images/ButtonContact.jpg')" onmouseout="MM_swapImgRestore('AButtonContact','/images/AButtonContact.gif')" href="CL.html"><img id="AButtonContact" src="/images/AButtonContact.gif" alt="" name="AButtonContact" width="122" height="70" border="0" /></a></div>
+						<a onmouseover="MM_swapImage('AButtonContact','','/images/ButtonContact.jpg')" onmouseout="MM_swapImgRestore()" href="CL.html"><img id="AButtonContact" src="/images/AButtonContact.gif" alt="" name="AButtonContact" width="122" height="70" border="0" /></a></div>
 				</td>
 				<td width="125">
 					<div align="center">
-						<a onmouseover="MM_swapImage('AButtonHome','','/images/ButtonHome.gif')" onmouseout="MM_swapImgRestore('AButtonHome','/images/AButtonHome.gif')" href="index.html"><img id="AButtonHome" src="/images/AButtonHome.gif" alt="" name="AButtonHome" width="122" height="70" border="0" /></a></div>
+						<a onmouseover="MM_swapImage('AButtonHome','','/images/ButtonHome.gif')" onmouseout="MM_swapImgRestore()" href="index.html"><img id="AButtonHome" src="/images/AButtonHome.gif" alt="" name="AButtonHome" width="122" height="70" border="0" /></a></div>
 				</td>
 			</tr>
 			<tr>
