--- a/PROJECTUSAGymnastics.html
+++ b/PROJECTUSAGymnastics.html
@@ -81,27 +81,27 @@
 			<tr>
 				<td width="122">
 					<div align="center">
-						<a onmouseover="MM_swapImage('AButtonWebFlicks','','/images/ButtonWebFlicks.gif')" onmouseout="MM_swapImgRestore('AButtonWebFlicks','/images/AButtonWebFlicks.gif')" href="WebFlicks.html"><img id="AButtonWebFlicks" src="/images/AButtonWebFlicks.gif" alt="" name="AButtonWebFlicks" width="122" height="70" border="0" /></a></div>
+						<a onmouseover="MM_swapImage('AButtonWebFlicks','','/images/ButtonWebFlicks.gif')" onmouseout="MM_swapImgRestore()" href="WebFlicks.html"><img id="AButtonWebFlicks" src="/images/AButtonWebFlicks.gif" alt="" name="AButtonWebFlicks" width="122" height="70" border="0" /></a></div>
 				</td>
 				<td width="122">
 					<div align="center">
-						<a onmouseover="MM_swapImage('AButtonNationalBC','','/images/ButtonNationalBC.jpg')" onmouseout="MM_swapImgRestore('AButtonNationalBC','/images/AButtonNationalBC.gif')" href="NB.html"><img id="AButtonNationalBC" src="/images/AButtonNationalBC.gif" alt="" name="AButtonNationalBC" width="122" height="70" border="0" /></a></div>
+						<a onmouseover="MM_swapImage('AButtonNationalBC','','/images/ButtonNationalBC.jpg')" onmouseout="MM_swapImgRestore()" href="NB.html"><img id="AButtonNationalBC" src="/images/AButtonNationalBC.gif" alt="" name="AButtonNationalBC" width="122" height="70" border="0" /></a></div>
 				</td>
 				<td width="122">
 					<div align="center">
-						<a onmouseover="MM_swapImage('AButtonPhotoS','','/images/ButtonPhotoS.gif')" onmouseout="MM_swapImgRestore('AButtonPhotoS','/images/AButtonPhotoS.gif')" href="PS.html"><img id="AButtonPhotoS" src="/images/AButtonPhotoS.gif" alt="" name="AButtonPhotoS" width="122" height="70" border="0" /></a></div>
+						<a onmouseover="MM_swapImage('AButtonPhotoS','','/images/ButtonPhotoS.gif')" onmouseout="MM_swapImgRestore()" href="PS.html"><img id="AButtonPhotoS" src="/images/AButtonPhotoS.gif" alt="" name="AButtonPhotoS" width="122" height="70" border="0" /></a></div>
 				</td>
 				<td width="106">
 					<div align="center">
-						<a onmouseover="MM_swapImage('AButtonClients','','/images/ButtonClients.jpg')" onmouseout="MM_swapImgRestore('AButtonClients','/images/AButtonClients.gif')" href="OC.html"><img id="AButtonClients" src="/images/AButtonClients.gif" alt="" name="AButtonClients" width="122" height="70" border="0" /></a></div>
+						<a onmouseover="MM_swapImage('AButtonClients','','/images/ButtonClients.jpg')" onmouseout="MM_swapImgRestore()" href="OC.html"><img id="AButtonClients" src="/images/AButtonClients.gif" alt="" name="AButtonClients" width="122" height="70" border="0" /></a></div>
 				</td>
 				<td width="107">
 					<div align="center">
-						<a onmouseover="MM_swapImage('AButtonContact','','/images/ButtonContact.jpg')" onmouseout="MM_swapImgRestore('AButtonContact','/images/AButtonContact.gif')" href="CL.html"><img id="AButtonContact" src="/images/AButtonContact.gif" alt="" name="AButtonContact" width="122" height="70" border="0" /></a></div>
+						<a onmouseover="MM_swapImage('AButtonContact','','/images/ButtonContact.jpg')" onmouseout="MM_swapImgRestore()" href="CL.html"><img id="AButtonContact" src="/images/AButtonContact.gif" alt="" name="AButtonContact" width="122" height="70" border="0" /></a></div>
 				</td>
 				<td width="125">
 					<div align="center">
-						<a onmouseover="MM_swapImage('AButtonHome','','/images/ButtonHome.gif')" onmouseout="MM_swapImgRestore('AButtonHome','/images/AButtonHome.gif')" href="index.html"><img id="AButtonHome" src="/images/AButtonHome.gif" alt="" name="AButtonHome" width="122" height="70" border="0" /></a></div>
+						<a onmouseover="MM_swapImage('AButtonHome','','/images/ButtonHome.gif')" onmouseout="MM_swapImgRestore()" href="index.html"><img id="AButtonHome" src="/images/AButtonHome.gif" alt="" name="AButtonHome" width="122" height="70" border="0" /></a></div>
 				</td>
 			</tr>
 			<tr>
